qtsvg-opensource-src (5.14.2-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Standards-Version to 5.14.2.
  * Bump ABI version to qtsvg-abi-5-14-2.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 May 2020 20:16:02 +0300

qtsvg-opensource-src (5.14.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.14.1.
  * Bump ABI version to qtsvg-abi-5-14-1.
  * Update debian/libqt5svg5.symbols from the current build log.
  * Update to debhelper compat level 12, use the new syntax.
  * Bump Standards-Version to 4.5.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 20 Feb 2020 16:53:58 +0300

qtsvg-opensource-src (5.12.5-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 20 Oct 2019 23:18:22 +0300

qtsvg-opensource-src (5.12.5-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.5.
  * Bump ABI version to qtsvg-abi-5-12-5.
  * Update debian/libqt5svg5.symbols for GCC 9 changes.
  * Bump Standards-Version to 4.4.1, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 17 Oct 2019 00:00:28 +0300

qtsvg-opensource-src (5.12.4-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.4.
  * Mark one symbol as optional to fix FTBFS with GCC 9 (closes: #925815).

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 25 Jun 2019 14:03:25 +0300

qtsvg-opensource-src (5.12.3-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Add Build-Depends-Package field to debian/libqt5svg5.symbols.
  * Simplify debian/rules by using debian/not-installed file.
  * Add one new symbol to debian/libqt5svg5.symbols.
